Updated to 1.19.4, fixed bugs